# SpeakAble

./: .env.example  .gitignore  AGENTS.md  README.md  SUBMISSION.md  netlify.toml  package-lock.json  package.json  render.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/mobile/: .env.example  App.tsx  app.json  metro.config.js  package.json  tsconfig.json
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vercel.json
database/: .env.example  seed.sql
database/migrations/: 0001_initial_schema.sql
database/scripts/: apply_sql.py
docs/: 01-system-architecture.md  02-repo-structure.md  03-database-schema.md  04-api-contract.md  05-testing-deployment.md  06-risk-register.md  final-implementation-report.md  openapi-node.json  openapi.json
infra/aws/: README.md  apprunner.example.json  preflight.ps1
infra/render/: render.yaml
services/api/: .env.example  Dockerfile  Dockerfile.lambda  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/core/: auth.py  coach.py  config.py  lesson_store.py  model_provider.py  moderation.py  persistence.py  recommendation_store.py  scenario_store.py  schemas.py
services/api/app/routers/: admin.py  analytics.py  assessment.py  coach.py  lessons.py  moderation.py  onboarding.py  privacy.py  progress.py  recommendations.py  role_play.py  scenarios.py
services/api/scripts/: export_openapi.py
services/api/tests/: test_api.py
services/api/tests/unit/: test_auth.py  test_coach.py
supabase/: config.toml
(+38 files in other folders)
