[project]
name = "speakable-api"
version = "0.1.0"
description = "FastAPI service for SpeakAble"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "mangum==0.19.0",
  "psycopg[binary]==3.2.13",
  "pydantic-settings==2.14.1",
  "PyJWT[crypto]==2.10.1",
  "uvicorn[standard]==0.47.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3"
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
